--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,16 +14,19 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
+      <tr style="container-fluid" style="bolder:2px solid #cecece;">
+    <h1 class="h3 mb-3 font-weight-small" style="text-align:center;"><b>Please sign in</b></h1>
+    <label for="inputEmail"><b>Email</b></label>
+    <input type="email" placeholder="Email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus">
+    <br>
+    <label for="inputPassword"><b>Password</b></label> 
+    <input type="password" name="password" placeholder="Password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <br>
+    <label for="confirmPassword"><b>Confirm Password</b></label>
+    <input type="password" name="password" placeholder="Confirm Password" id="inputPassword" class="form-control" autocomplete="current-password" required>
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
-
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
