--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,32 +5,35 @@
     <meta charset="UTF-8" />
     <title>{% block title %}Welcome!{% endblock %}</title>
     <link
-rel="stylesheet"
+      rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-       
     />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    
     {% block stylesheets %}{% endblock %}
   </head>
-  <body > 
+  <body>
     <nav
       class="navbar navbar-expand-lg navbar-light bg-light"
       style="height: 70px;"
     >
-      <a class="navbar-brand" href="#">Greenwich Viet Nam</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
       <ul class="nav navbar-nav navbar-right">
+       
         {% if app.user %}
         <li><a class="nav-link" href="{{ path('app_logout') }}">Logout</a></li>
         {% else %}
         <li><a class="nav-link" href="{{ path('app_login') }}">Login</a></li>
-        <li>
-          <a class="nav-link" href="{{ path('app_register') }}">Register</a>
-        </li>
+      
         {% endif %}
       </ul>
     </nav>
+    <div class ="row">
+    
+    <img src="https://greenwich.edu.vn/wp-content/uploads/2022/05/2022-Greenwich-Eng.png" style = "display: block; margin-left: auto; margin-right:auto; margin-top: 15px; width:400px;"
+    alt>
+    
+    </div>
+    <div class="container">
+</div>
     {% block body %}{% endblock %} {% block javascripts %}{% endblock %}
   </body>
 </html>
