--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,230 +1,180 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>{% block title %}Welcome our shop!{% endblock %}</title>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
-    <!-- MDB -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="{{asset("styles/style.css")}}" />
-</head>
-<body>
 
-    <!-- Navbar -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-  <!-- Container wrapper -->
-  <div class="container">    
-    <!-- Toggle button -->
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent1"
-    >
-      <i class="fas fa-bars"></i>
-    </button>
+<html>
 
-    <!-- Collapsible wrapper -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent1">      
-      <!-- Navbar brand -->
-      <a class="navbar-brand mt-2 mt-sm-0" href="#">
-        <img
-          src="https://talent2win.com/wp-content/uploads/2021/09/LogoDefault.png"
-          height="20"
-          alt="Logo"
-          loading="lazy"
-        />
-      </a>
-      <!-- Left links -->
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link " href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{path('product_show')}}">Product</a>
-        </li>
-      </ul>
-      <!-- Left links -->      
-    </div>
-    <!-- Collapsible wrapper -->
-    
-    <!-- Right elements -->
-    <div class="d-flex align-items-center">
-
-      <!-- Icon -->
-      <a class="nav-link me-3" href="#">
-        <i class="fas fa-shopping-cart"></i>
-      </a>
-      <a class="nav-link me-3" href="#">
-        <i class="fas fa-sign-in-alt"></i>
-      </a>
-    </div>
-    <!-- Right elements -->
-    
-  </div>
-  <!-- Container wrapper -->
-</nav>
-<!-- Navbar -->
-   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <div style="height: 60px"></div>
-
-{% block body %}
- <!--Main layout-->
-<main>
-<div class="container">
-  <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark mt-3 mb-5 shadow p-2" style="background-color: #607D8B">
-  <!-- Container wrapper -->
-  <div class="container-fluid">
-
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">Categories:</a>
-
-    <!-- Toggle button -->
-    <button 
-       class="navbar-toggler" 
-       type="button" 
-       data-bs-toggle="collapse" 
-       data-bs-target="#navbarSupportedContent2">
-      <i class="fas fa-bars"></i>
-    </button>
-
-    <!-- Collapsible wrapper -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent2">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-        <!-- Link -->
-        <li class="nav-item acitve">
-          <a class="nav-link text-white" href="#">All</a>
-        </li>
-
-      </ul>
-
-      <!-- Search -->
-      <form class="w-auto py-1" style="max-width: 12rem">
-        <input type="search" class="form-control rounded-0" placeholder="Search" aria-label="Search">
-      </form>
-
-    </div>
-  </div>
-  <!-- Container wrapper -->
-</nav>
-<!-- Navbar -->
-  
-<!-- Products -->
-  <section>
-  <div class="text-center">
-    <div class="row">
-      {% for p in products %}
-        <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card">
-          <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
-            data-mdb-ripple-color="light">
-            {% set img = p.image %}
-            <img src="{{asset('uploads/'~img)}}"
-              class="w-100" />
-          </div>
-          <div class="card-body">
-            <a href="{{path('product_read',{"id":p.id})}}" class="text-reset">
-              <h5 class="card-title mb-2">{{p.name}}</h5>
-            </a>
-            <h6 class="mb-3 price">{{p.price}}$</h6>
-          </div>
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+        <!-- <link rel="shortcut icon" href="https://ap.greenwich.edu.vn/favicon.ico" type="image/x-icon"> -->
+        <title>Greenwich FPT Academic Portal</title>
+        <link rel="Stylesheet" href="Content/bootstrap.css" type="text/css">
+        <link rel="Stylesheet" href="Content/bootstrap.min.css" type="text/css"><link rel="Stylesheet" 
+        href="Content/bootstrap-theme.min.css" type="text/css">
+        <style type="text/css">
+            .style1 {
+                font-weight: bold;
+            }
+        </style>
+    </head>
+    <img src="https://greenwich.edu.vn/wp-content/uploads/2022/05/2022-Greenwich-Eng.png" style = "display: block; margin-left: auto; margin-right:auto; margin-top: 15px; width:400px;"
+    {# <img style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" 
+        src="https://greenwich.edu.vn/wp-content/uploads/2021/04/00012-1024x682.jpg" width="887" height="590"> #}
    
-  </div>
-</section>
-</div>
-</main>
- <!--Main layout-->
+            {# <div class="row"> #}
+                {# <div class="col-md-12">
+                    <img src="https://tse4.explicit.bing.net/th?id=OIP.oRiF_Se22xG_KnNyodbO8gHaEC&amp;pid=Api&amp;P=0"
+                     style="display: block; margin-left: auto; margin-right: auto; margin-top: 15px; width: 250px;" alt="">
+                </div> #}
+    
+            {# </div> #}
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    <span style="text-align: center; display: flex; justify-content: center; align-items: center; font-weight: 900; font-size: x-large; color: #003399">
+                    Academic Portal</span>
+    
+                </div>
+    
+            </div>
+    </div>
+                        <div id="ctl00_divUser" style="float: right; margin-right: 16px;">
+                            <a href="?view=user">
+                                <span id="ctl00_lblLogIn" class="label label-success">Welcome</span></a>
+                                 <a style="color: rgb(57, 23, 206);" href="?logout=true" class="label label-success">logout</a> |
+                            <span id="ctl00_lblCampusName" class="label label-success"> CAMPUS:</span>
+                        </div>
+    
+                        <ol class="breadcrumb">
+                            <li>
+                                <span id="ctl00_lblNavigation"></style><b>&nbsp;</b></span></li>
+                                <div class="dropdown" style=" list-style-type: none;text-align: center;">
+                           
+                                                                             
+                            <a style="font-size: 20px;  text-decoration: none; color:aliceblue; background:darkturquoise;" 
+                            href="Student Manage.php">Student Management</a>
 
+                                                                                 
+                               <a style="font-size: 20px;  text-decoration: none;color:aliceblue; background:darkturquoise;;
+                               "href="Student Management.html">Academic Transcript</a>
 
-{% endblock %}
+                                                                                    
+                                    <a style="font-size: 20px; text-decoration: none;color:aliceblue;background:darkturquoise;;
+                                   "href="Student Management.html">Industry management</a>
 
-<footer class="text-center text-white mt-4" style="background-color: #607D8B">
-  
-  <hr class="text-dark">
-  
-  <div class="container">
-    <!-- Section: Social media -->
-    <section class="mb-3">
-      
-      <!-- Facebook -->
-      <a
-        class="btn-link btn-floating btn-lg text-white"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        ><i class="fab fa-facebook-f"></i
-      ></a>
+                                                                                        
+                                       <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:darkturquoise;"
+                                       href="Student Management.html">classroom management</a>
+                        </ol>
+                        
+                        <!-- <table width="100%">
+                            <tbody><tr style="border-bottom: 0 none">
+                                <td>
+                                    <div class="container-fluid" style="border:1px solid #dd18cd;"> -->
+                                                                      
+                
+                                        <style>
+                                            #displayed {
+                                                display: block;
+                                                margin-left: auto;
+                                                margin-right: auto;
+                                            }
+                                            .qr {
+                                                float: right;
+                                                position: fixed;
+                                                bottom: 0px;
+                                                right: 0px;
+                                            }
+                                         .container {
+                                                max-width: 100%;
+                                            }
+                                            body{
+                                                font-size: 14px;
+                                            }
+                                            table {
+                                                font-size: 14px;
+                                            }
+                                            div#exampleModal {
+                                                background: rgb(0 0 255 / 20%);
+                                            }
+                                        </style>
+                                        <link rel="Stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" type="text/css">
+                                        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+                                        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+                                        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+                                        <script type="text/javascript">
+                                            $(document).ready(function () {
+                                    
+                                                $("#thover").click(function () {
+                                                    $(this).fadeOut();
+                                                    $("#tpopup").fadeOut();
+                                                });
+                                    
+                                                $("#tclose").click(function () {
+                                                    $("#thover").fadeOut();
+                                                    $("#tpopup").fadeOut();
+                                                });
+                                    
+                                            });
+                                            $(document).ready(function () {
+                                                if ($(window).width() < 500) {
+                                                    $("#myDiv").removeClass('box topAthletes');
+                                                    $("#myDiv").addClass('box');
+                                                }
+                                                 $('#exampleModal').modal({
+                                                    show: true
+                                                })
+                                            });
+                                            
+                                            
+                                        </script>
 
-      <!-- Twitter -->
-      <a
-        class="btn-link btn-floating btn-lg text-white"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        ><i class="fab fa-twitter"></i
-      ></a>
-
-      <!-- Google -->
-      <a
-        class="btn-link btn-floating btn-lg text-white"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        ><i class="fab fa-google"></i
-      ></a>
-
-      <!-- Instagram -->
-      <a
-        class="btn-link btn-floating btn-lg text-white"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        ><i class="fab fa-instagram"></i
-      ></a>
-
-      <!-- YouTube -->
-      <a
-        class="btn-link btn-floating btn-lg text-white"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        ><i class="fab fa-youtube"></i
-      ></a>
-      <!-- Github -->
-      <a
-        class="btn-link btn-floating btn-lg text-white"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        ><i class="fab fa-github"></i
-      ></a>
-    </section>
-    <!-- Section: Social media -->
-  </div>
-  <!-- Grid container -->
-
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); text-color: #E0E0E0">
-    © 2023 Copyright: mdbootstrap
-  </div>
-  <!-- Copyright -->
-</footer>
-</body>
+                                          </div>
+                                        </td>
+                                    </tr>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <footer class="text-center text-white mt-4" style="background-color:aqua">
+                                    <tr style="border-bottom: 0 none">
+                                        <td>
+                                            <table width="100%" style="border: 1px solid transparent;" id="cssTable">
+            
+                                                <tbody><tr>
+                                                    <td>
+                                                        <div id="ctl00_divSuportCT">
+                                                            <strong>Any comments or questions, please contact:</strong> Greenwich VIET NAM, No. 160, 30/4 Street, An Phu Ward, Ninh Kieu District, Can Tho City. Phone: <strong>02923.512.369</strong>
+            
+                                                        </div>
+                                                        
+                                                    </td>
+            
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <p style="text-align: center">
+                                                            © Powered by <a href="https://greenwich.edu.vn/" target="_blank">Greenwich Việt Nam</a>&nbsp;|&nbsp;
+                    <a href="http://cms.greenwich.edu.vn/" target="_blank">CMS</a>
+                                                        </p>
+                                                    </td>
+                                                </tr>
+                                            </tbody></table>
+            
+                                        </td>
+                                    </tr>
+                                </tbody></table>
+            
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                                    </footer>
 </html>
-
