--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -38,7 +38,7 @@
     </div>
                         <div id="ctl00_divUser" style="float: right; margin-right: 16px;">
                             <a href="?view=user">
-                                <span id="ctl00_lblLogIn" class="label label-success">Welcome</span></a>
+                                <span id="ctl00_lblLogIn" class="label label-success"><a href="{{ path('app_logout') }}">Welcome</span></a>
                                  <a style="color: rgb(57, 23, 206);" href="?logout=true" class="label label-success">logout</a> |
                             <span id="ctl00_lblCampusName" class="label label-success"> CAMPUS:</span>
                         </div>
