--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -54,7 +54,7 @@
 
                                                                                  
                                <a style="font-size: 20px;  text-decoration: none;color:aliceblue; background:darkturquoise;;
-                               "href="Student Management.html">Academic Transcript</a>
+                               "href="Student Management.html">Score management</a>
 
                                                                                     
                                     <a style="font-size: 20px; text-decoration: none;color:aliceblue;background:darkturquoise;;
@@ -62,7 +62,7 @@
 
                                                                                         
                                        <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:darkturquoise;"
-                                       href="Student Management.html">classroom management</a>
+                                       href="Student Management.html">class management</a>
                         </ol>
                         
                         <!-- <table width="100%">
