--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -63,6 +63,8 @@
                                                                                         
                                        <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:darkturquoise;"
                                        href="Student Management.html">class management</a>
+                                        <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:darkturquoise;"
+                                       href="Student Management.html">Subject management</a>
                         </ol>
                         
                         <!-- <table width="100%">
