--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,18 +14,7 @@
             }
         </style>
     </head>
-    <img src="https://greenwich.edu.vn/wp-content/uploads/2022/05/2022-Greenwich-Eng.png" style = "display: block; margin-left: auto; margin-right:auto; margin-top: 15px; width:400px;"
-    {# <img style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" 
-        src="https://greenwich.edu.vn/wp-content/uploads/2021/04/00012-1024x682.jpg" width="887" height="590"> #}
-   
-            {# <div class="row"> #}
-                {# <div class="col-md-12">
-                    <img src="https://tse4.explicit.bing.net/th?id=OIP.oRiF_Se22xG_KnNyodbO8gHaEC&amp;pid=Api&amp;P=0"
-                     style="display: block; margin-left: auto; margin-right: auto; margin-top: 15px; width: 250px;" alt="">
-                </div> #}
-    
-            {# </div> #}
-            <br>
+    <img src="https://greenwich.edu.vn/wp-content/uploads/2022/05/2022-Greenwich-Eng.png" style = "display: block; margin-left: auto; margin-right:auto; margin-top: 15px; width:400px;">
             <br>
             <div class="row">
                 <div class="col-md-12">
