--- a/templates/major/index.html.twig
+++ b/templates/major/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello IndustryController!{% endblock %}
+{% block title %}Hello MajorController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code><a href="{{ 'D:/studentasm/src/Controller/IndustryController.php'|file_link(0) }}">src/Controller/IndustryController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/studentasm/templates/industry/index.html.twig'|file_link(0) }}">templates/industry/index.html.twig</a></code></li>
+        <li>Your controller at <code><a href="{{ 'D:/studentasm/src/Controller/MajorController.php'|file_link(0) }}">src/Controller/MajorController.php</a></code></li>
+        <li>Your template at <code><a href="{{ 'D:/studentasm/templates/major/index.html.twig'|file_link(0) }}">templates/major/index.html.twig</a></code></li>
     </ul>
 </div>
 {% endblock %}
