--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -37,7 +37,7 @@
                            
                                                                              
                             <a style="font-size: 20px;  text-decoration: none; color:aliceblue; background:darkturquoise;" 
-                            href="Student Manage.php">Student Management</a>
+                            href="{{path('student_show')}}">Student Management</a>
 
                                                                                  
                                <a style="font-size: 20px;  text-decoration: none;color:aliceblue; background:darkturquoise;;
