--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -13,6 +13,22 @@
                 font-weight: bold;
             }
         </style>
+        {# <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>{% block title %}Welcome our shop!{% endblock %}</title>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
+    <!-- Google Fonts Roboto -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
+    <!-- MDB -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="{{asset("styles/style.css")}}" />
+</head> #}
     </head>
     <img src="https://greenwich.edu.vn/wp-content/uploads/2022/05/2022-Greenwich-Eng.png" style = "display: block; margin-left: auto; margin-right:auto; margin-top: 15px; width:400px;">
             <br>
@@ -40,9 +56,6 @@
 
                             <a style="font-size: 20px;  text-decoration: none; color:aliceblue; background:darkturquoise;" 
                             href="{{path('student_show')}}">Student Management</a>
-
-                            <a style="font-size: 20px;  text-decoration: none; color:aliceblue; background:#0000BB;" 
-                            href="Student Manage.php">Student Management</a>
 
 
                             <a style="font-size: 20px;  text-decoration: none;color:aliceblue; background:#0000BB;;
