--- a/templates/student/index.html.twig
+++ b/templates/student/index.html.twig
@@ -1,53 +1,47 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin.html.twig' %}
 
-{% block title %}Hello StudentController!{% endblock %}
+{% block title %}Hello ProductController!{% endblock %}
 
 {% block body %}
-<?php
-?>
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Student Management</title>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-	<div class="container">
-		<div class="panel panel-primary">
-			<div class="panel-heading">
-				Student Management
-				<form method="get">
-					<input type="text" name="s" class="form-control" style="margin-top: 15px; margin-bottom: 15px;" placeholder="search by name">
-				</form>
-			</div>
-			<div class="panel-body">
-				<table class="table table-bordered">
-					<thead>
-						<tr>
-							<th>Code</th>
-							<th>FullName</th>
-							<th>Email</th>
+  <div className="page-heading pb-2 mt-4 mb-2 ">
+                    <h3>Manager</h3> <a href="{{path('student_create')}}"><button type="button" class="btn btn-outline-primary">Insert</button></a>
+                </div>
+                <div class="page-content">
+                <div class="btn-group" role="group" aria-label="Basic outlined example">
+               
+                </div>
+                <div class="card">
+                    <div class="container mb-3">
+                        <div class="table-responsive text-nowrap">
+                      <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th>#</th>
+                            <th>Name</th>
+                            <th>Code</th>
+                            <th>Email</th>
                             <th>Image</th>
-                            <th>Class</th>
-							<!-- <a href="Add_Student.html">ADD</a> -->
-							<!-- <td><button class="btn btn-success"href="Add_Student.php">Add</button></td> -->
-							<a class="btn btn-success" href="Add_Student.php">Add</a>
-							<a class="btn btn-success" href="Edit_student.php">Edit</a>
-							<!-- <td><button class="btn btn-warning"href="delete_student.php">Edit</button></td> -->
-							<td><button class="btn btn-danger"href="Delete_student.php">Delete</button></td>
-
-							<!-- <a class="btn btn-success" href="">Edit</a>
-
-                            <a class="btn btn-success" href="">Delele</a> -->
-					</thead>
+                            <th>Action</th>
+                          </tr>
+                        </thead>
+                        <tbody class="table-border-bottom-0">
+                          {% for st in student %}
+                              <tr>
+                                  <td>{{ st.id}}</td>
+                                  <td>{{ st.fullname}}</td>
+                                  <td>{{ st.studentcode}}</td>
+                                  <td>{{ st.email}}</td>
+								  <td>{{ st.image}}</td>
+                                  <td>
+                                    <a href="{{path('student_edit',{'id':st.id})}}">Edit</a>
+                                    <a href="{{path('student_delete',{'id':st.id})}}">Delete</a></td>
+                              </tr>
+                          {% endfor %}
+                          
+                        </tbody>
+                      </table>
+                    </div>
+                </div>
+                </div>
+                </div>
 {% endblock %}
