--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -63,7 +63,7 @@
 
                                                                                  
                                <a style="font-size: 20px;  text-decoration: none;color:aliceblue; background:#0000BB;;
-                               "href="Student Management.html">Major Management</a>
+                               "href="{{path('major_show')}}">Major Management</a>
 
                                                                                     
                                     <a style="font-size: 20px; text-decoration: none;color:aliceblue;background:#0000BB;;
@@ -71,7 +71,7 @@
 
                                                                                         
                                        <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:#0000BB;"
-                                       href="Student Management.html">Subject Management</a>
+                                       href="{{path('subject_show')}}">Subject Management</a>
                             <li>
                                
                         </ol>
