--- a/templates/subject/index.html.twig
+++ b/templates/subject/index.html.twig
@@ -7,14 +7,41 @@
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
+<div className="page-heading pb-2 mt-4 mb-2 ">
+                    <h3>Manager</h3> <a href="{{path('subject_create')}}"><button type="button" class="btn btn-outline-primary">Insert</button></a>
+                </div>
+                <div class="page-content">
+                <div class="btn-group" role="group" aria-label="Basic outlined example">
+               
+                </div>
+                <div class="card">
+                    <div class="container mb-3">
+                        <div class="table-responsive text-nowrap">
+                      <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th>Subject ID</th>
+                            <th>Subject Name</th>
+                            
+                          </tr>
+                        </thead>
+                        <tbody class="table-border-bottom-0">
+                          {% for ms in Subject %}
+                              <tr>
+                                  <td>{{ ms.subjectcode}}</td>
+                                  <td>{{ ms.subjectname}}</td>
+                                  
+                                  <td>
+                                    <a href="{{path('subject_edit',{'id':ms.id})}}">Edit</a>
+                                    <a href="{{path('subject_delete',{'id':ms.id})}}">Delete</a></td>
+                              </tr>
+                          {% endfor %}
+                          
+                        </tbody>
+                      </table>
+                    </div>
+                </div>
+                </div>
+                </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/studentasm/src/Controller/SubjectController.php'|file_link(0) }}">src/Controller/SubjectController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/studentasm/templates/subject/index.html.twig'|file_link(0) }}">templates/subject/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
