Fixed ClassController and show, insert, update and delete class

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -57,6 +57,9 @@
                                                                                         
                                        <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:#0000BB;"
                                        href="Student Management.html">Subject Management</a>
+
+                                       <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:#0000BB;"
+                                       href="{{path('study_show')}}">Term </a>
                             <li>
                                
                         </ol>
