Fixed ClassController and show, insert, update and delete class

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -47,16 +47,15 @@
                                "href="{{path('score_show')}}">Score Management</a>
 
                                                                                  
-                               <a style="font-size: 20px;  text-decoration: none;color:aliceblue; background:#0000BB;;
-                               "href="Student Management.html">Major Management</a>
+                               <a style="font-size: 20px;  text-decoration: none;color:aliceblue; background:#0000BB" href="{{path('major_show')}}">Major Management</a>
 
                                                                                     
-                                    <a style="font-size: 20px; text-decoration: none;color:aliceblue;background:#0000BB;;
+                                    <a style="font-size: 20px; text-decoration: none;color:aliceblue;background:#0000BB;
                                    "href="{{path('class_show')}}">Classroom Management</a>
 
                                                                                         
                                        <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:#0000BB;"
-                                       href="Student Management.html">Subject Management</a>
+                                       href="{{path('subject_show')}}">Subject Management</a>
 
                                        <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:#0000BB;"
                                        href="{{path('study_show')}}">Term </a>
