--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -39,7 +39,7 @@
                            
                                                                              
 
-                            <a style="font-size: 20px;  text-decoration: none; color:aliceblue; background:darkturquoise;" 
+                            <a style="font-size: 20px;  text-decoration: none; color:aliceblue; background:#0000BB;" 
                             href="{{path('student_show')}}">Student Management</a>
 
 
@@ -57,6 +57,9 @@
                                                                                         
                                        <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:#0000BB;"
                                        href="{{path('subject_show')}}">Subject Management</a>
+
+                                       <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:#0000BB;"
+                                       href="{{path('study_show')}}">Term</a>
                             <li>
                                
                         </ol>
