--- a/templates/home(asm).html.twig
+++ b/templates/home(asm).html.twig
@@ -49,7 +49,7 @@
           <a class="nav-link " href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{path('product_show')}}">Product</a>
+          <a class="nav-link" href="{{path('product_show')}}">Student Management</a>
         </li>
       </ul>
       <!-- Left links -->      
