--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -26,6 +26,7 @@
     
             </div>
     </div>
+    
                         <div id="ctl00_divUser" style="float: right; margin-right: 16px;">
                             <a href="?view=user">
                                 <span id="ctl00_lblLogIn" class="label label-success"><a href="{{ path('app_logout') }}">Welcome</span></a>
@@ -63,7 +64,11 @@
                             <li>
                                
                         </ol>
-                        
+                        <body>
+        <body style="background-image:url('http://cmsbk.greenwich.edu.vn/pluginfile.php/1/theme_adaptable/p1/1661997361/socialbg.png')">
+
+</body>
+    </body>
                         <!-- <table width="100%">
                             <tbody><tr style="border-bottom: 0 none">
                                 <td>
