--- a/templates/major/form.html.twig
+++ b/templates/major/form.html.twig
@@ -1,3 +1,14 @@
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    {% block stylesheets %}{% endblock %}
+  </head>
+  <body>
 <div className="page-heading pb-2 mt-4 mb-2 ">
                 <h3>Manager</h3> <a href="{{path('major_show')}}"><button type="button" class="btn btn-outline-primary">Back to index</button></a>
             </div>
@@ -75,3 +86,7 @@
                     </div> <!--card content-->
                 </div> <!--card-->
             </div><!--page content-->
+            </div>
+    {% block body %}{% endblock %} {% block javascripts %}{% endblock %}
+  </body>
+</html>
