--- a/templates/score/index.html.twig
+++ b/templates/score/index.html.twig
@@ -18,9 +18,8 @@
                           <tr>
                             <th>#</th>
                             <th>Score</th>
-                            <th>Code</th>
+                            <th>Student Code</th>
                             <th>Subject</th>
-                            <th>Action</th>
                           </tr>
                         </thead>
                         <tbody class="table-border-bottom-0">
