edit view form admin and login

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -170,6 +170,9 @@
               </ul>
             </div>
           </nav>
+            <body style="background-image:url('https://international.fpt.edu.vn/web/image/image.gallery/28/image')">
+
+</body>
 
           <!-- / Navbar -->
 
