--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -60,7 +60,7 @@
                                        href="{{path('subject_show')}}">Subject Management</a>
 
                                        <a style="font-size: 20px;font-size: 20px; text-decoration: none;color:aliceblue; background:#0000BB;"
-                                       href="{{path('study_show')}}">Term</a>
+                                       href="{{path('study_show')}}">Term Management</a>
                             <li>
                                
                         </ol>
