edit style admin.html.twig

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -75,35 +75,35 @@
             </li>
 
             <li class="menu-header small text-uppercase">
-              <span class="menu-header-text">All Pages</span>
+              <span class="menu-header-text"style="color:AQUA">All Pages</span>
             </li>
             <li class="menu-item">
-              <a href="{{path('student_show')}}" class="menu-link menu-toggle">
+              <a href="{{path('student_show')}}" class="menu-link menu-toggle"style="border: 1px solid #0066ff;">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
                 <div>Student Management</div>
               </a>
               <li class="menu-item">
-              <a href="{{path('score_show')}}" class="menu-link menu-toggle">
+              <a href="{{path('score_show')}}" class="menu-link menu-toggle"style="border: 1px solid #0066ff;">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
                 <div>Score Management</div>
                 </a>
                 <li class="menu-item">
-              <a href="{{path('major_show')}}" class="menu-link menu-toggle">
+              <a href="{{path('major_show')}}" class="menu-link menu-toggle"style="border: 1px solid #0066ff;">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
                 <div>Major Management</div>
                 </a>
                 <li class="menu-item">
-              <a href="{{path('class_show')}}" class="menu-link menu-toggle">
+              <a href="{{path('class_show')}}" class="menu-link menu-toggle"style="border: 1px solid #0066ff;">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
                 <div>Classroom Management</div>
                 </a>
                    <li class="menu-item">
-              <a href="{{path('subject_show')}}" class="menu-link menu-toggle">
+              <a href="{{path('subject_show')}}" class="menu-link menu-toggle"style="border: 1px solid #0066ff;">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
                 <div>Subject Management</div>
                 </a>
                    <li class="menu-item">
-              <a href="{{path('study_show')}}" class="menu-link menu-toggle">
+              <a href="{{path('study_show')}}" class="menu-link menu-toggle"style="border: 1px solid #0066ff;">
                 <i class="menu-icon tf-icons bx bx-dock-top"></i>
                 <div>Term Management</div>
                 </a>
